--- a/TenderInfo/Views/Account/NewAccountModal.cshtml
+++ b/TenderInfo/Views/Account/NewAccountModal.cshtml
@@ -62,16 +62,22 @@
 <script>
     //加载项目负责人列表函数
     function GetProjectResponsiblePersonList(type) {
-        $.post("/SampleDelegation/GetProjectResponsiblePersonList", "", function (result) {
-            var list = "";
-            $.each(result, function (indexInArray, valueOfElement) {
-                list += "<option value='" + valueOfElement.UserID + "'>" + valueOfElement.UserName + "</option>";
-            });
-            if (type === "search") {
-                $("#ddlProjectResponsiblePersonSearch").append(list);
-            }
-            else {
-                $("#ddlProjectResponsiblePerson").empty().append(list);
+        $.ajax({
+            url: "/SampleDelegation/GetProjectResponsiblePersonList",
+            type: "post",
+            data: "",
+            async: false,
+            success: function (result) {
+                var list = "";
+                $.each(result, function (indexInArray, valueOfElement) {
+                    list += "<option value='" + valueOfElement.UserID + "'>" + valueOfElement.UserName + "</option>";
+                });
+                if (type === "search") {
+                    $("#ddlProjectResponsiblePersonSearch").append(list);
+                }
+                else {
+                    $("#ddlProjectResponsiblePerson").empty().append(list);
+                }
             }
         });
     }
