--- a/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
@@ -132,6 +132,7 @@
                                         <select id="ddlProgressStateEdit" name="ddlProgressStateEdit" class="form-control">
                                             <option value="对接">对接</option>
                                             <option value="实施">实施</option>
+                                            <option value="终止">终止</option>
                                         </select>
                                     </div>
                                 </div>
