--- a/TenderInfo/Views/ProgressInfo/SearchInfoMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/SearchInfoMaterial.cshtml
@@ -30,11 +30,12 @@
                     <option value="" selected>全部</option>
                     <option value="对接">对接</option>
                     <option value="实施">实施</option>
+                    <option value="终止">终止</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="tbxProjectNameSearch">拟招标项目名称或物资名称：</label>
-                <input type="text" id="tbxProjectNameSearch" class="form-control" placeholder="项目名称或物资名称">
+                <input type="text" id="tbxProjectNameSearch" class="form-control" placeholder="拟招标项目名称或物资名称">
             </div>
             <div class="form-group">
                 <label for="ddlProjectResponsiblePersonSearch">招标负责人：</label>
