--- a/TenderInfo/Views/ProgressInfo/SearchInfoProject.cshtml
+++ b/TenderInfo/Views/ProgressInfo/SearchInfoProject.cshtml
@@ -26,6 +26,7 @@
                     <option value="" selected>全部</option>
                     <option value="对接">对接</option>
                     <option value="实施">实施</option>
+                    <option value="终止">终止</option>
                 </select>
             </div>
             <div class="form-group">
